--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,18 +18,18 @@ jobs:
         with:
           python-version: '3.8'
 
-      # - name: Install dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-      # - name: Run tests
-      #   run: |
-      #     python manage.py test
+      - name: Run tests
+        run: |
+          python manage.py test
 
-      # - name: Install AWS CLI
-      #   run: |
-      #     sudo apt-get install -y awscli
+      - name: Install AWS CLI
+        run: |
+          sudo apt-get install -y awscli
 
       - name: Add SSH key
         uses: webfactory/ssh-agent@v0.5.3
