--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
 
       - name: Install AWS CLI
         run: |
+          sudo apt-get update
           sudo apt-get install -y awscli
 
       - name: Add SSH key
@@ -37,7 +38,8 @@ jobs:
           EC2_PUBLIC_IP: ${{ secrets.EC2_PUBLIC_IP }}
           EC2_USER: ${{ secrets.EC2_USER }}
         run: |
-          scp -o StrictHostKeyChecking=no -r * $EC2_USER@$EC2_PUBLIC_IP:/home/ubuntu/Django_coffeeshop
+          ssh-keyscan -H $EC2_PUBLIC_IP >> ~/.ssh/known_hosts
+          scp -i ${{ secrets.EC2_PRIVATE_KEY }} -o StrictHostKeyChecking=no -r * $EC2_USER@$EC2_PUBLIC_IP:/home/ubuntu/Django_coffeeshop
 
       - name: SSH to EC2 and Deploy
         env:
@@ -48,10 +50,10 @@ jobs:
             cd /home/ubuntu/Django_coffeeshop
             python3 -m venv venv
             source venv/bin/activate
+            pip install --upgrade pip
             pip install -r requirements.txt
             python manage.py collectstatic --noinput
             python manage.py migrate
             sudo systemctl restart gunicorn
             sudo systemctl restart nginx
           EOF
-
