--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
           EC2_PUBLIC_IP: ${{ secrets.EC2_PUBLIC_IP }}
           EC2_USER: ${{ secrets.EC2_USER }}
         run: |
-          scp -i ${{ secrets.EC2_PRIVATE_KEY }} -o StrictHostKeyChecking=no -r * $EC2_USER@$EC2_PUBLIC_IP:/home/ubuntu/Django_coffeeshop
+          scp -o StrictHostKeyChecking=no -r * $EC2_USER@$EC2_PUBLIC_IP:/home/ubuntu/my-django-project
 
       - name: SSH to EC2 and Deploy
         env:
