--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,6 +53,6 @@ jobs:
             pip install -r requirements.txt
             python manage.py collectstatic --noinput
             python manage.py migrate
-            sudo systemctl restart gunicorn
-            sudo systemctl restart nginx
+            # sudo systemctl restart gunicorn
+            # sudo systemctl restart nginx
           EOF
