--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,10 +48,10 @@ jobs:
           ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_PUBLIC_IP << 'EOF'
             cd /home/ubuntu/Django_coffeeshop
             python3 -m venv venv
-            /home/ubuntu/Django_coffeeshop/venv/bin/python -m pip install --upgrade pip
-            /home/ubuntu/Django_coffeeshop/venv/bin/pip install -r requirements.txt
-            /home/ubuntu/Django_coffeeshop/venv/bin/python manage.py collectstatic --noinput
-            /home/ubuntu/Django_coffeeshop/venv/bin/python manage.py migrate
+            source venv/bin/activate
+            pip install -r requirements.txt
+            python manage.py collectstatic --noinput
+            python manage.py migrate
             # sudo systemctl restart gunicorn
             # sudo systemctl restart nginx
           EOF
