--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,17 +42,25 @@ jobs:
 
       - name: SSH to EC2 and Deploy
         env:
-            EC2_PUBLIC_IP: ${{ secrets.EC2_PUBLIC_IP }}
-            EC2_USER: ${{ secrets.EC2_USER }}
+          EC2_PUBLIC_IP: ${{ secrets.EC2_PUBLIC_IP }}
+          EC2_USER: ${{ secrets.EC2_USER }}
         run: |
           ssh -o StrictHostKeyChecking=no $EC2_USER@$EC2_PUBLIC_IP << 'EOF'
             cd /home/ubuntu/Django_coffeeshop
+            
+            # Ensure Python venv and install dependencies
             python3 -m venv venv
             source venv/bin/activate
+            pip install --upgrade pip
             pip install -r requirements.txt
+            
+            # Run Django management commands
             python manage.py collectstatic --noinput
             python manage.py migrate
+            
+            # Restart Gunicorn and Nginx (if applicable)
             # sudo systemctl restart gunicorn
             # sudo systemctl restart nginx
+            
+            deactivate  # Deactivate virtual environment
           EOF
-        
