--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,15 +54,15 @@ jobs:
             pip install -r requirements.txt
             
             # Run Django management commands
-            
+
             python manage.py collectstatic --noinput
             python manage.py makemigrations
 
             python manage.py migrate
             
             # Restart Gunicorn and Nginx (if applicable)
-            # sudo systemctl restart gunicorn
-            # sudo systemctl restart nginx
+            sudo systemctl restart gunicorn
+            sudo systemctl restart nginx
             
             deactivate  # Deactivate virtual environment
           EOF
